# codex-notion-app-factory

./: .gitignore  AGENTS.md  Makefile  README.md  REAL_EXECUTION_SHOWCASE.md  SHOWCASE.md  pyproject.toml
.github/workflows/: deploy-generated-apps-pages.yml
deploy/gce/: codex-factory.service  nginx-codex-factory.conf
docs/: agents-sdk-runtime.md  auth-architecture.md  autonomy-contract.md  change-boundaries.md  gce-runtime-deploy.md  github-pages-automation.md  intent-contract.md  mobile-first-operating-model.md  notion-request-contract.md  operating-model.md  request-contract.md  state-contract.md  stateful-session-loop.md  system-design.md  ux-feedback-loop.md  verification-gates.md
docs/factory-runtime/: deploy_plan.md  implementation_plan.md  spec.md  tasks.md
scripts/: bootstrap_gce_runtime.sh  build_pages_site.py  check_remote_runtime_auth.sh  deploy_gce_runtime.sh  manage_app_sessions.py  remote_runtime_smoke_test.py  run_codex_agents_api.py  run_remote_phone_ops_check.sh  scaffold_mobile_pwa.py  setup_ip_https.sh  verify_deployed_console.sh  verify_deployed_runtime.sh  verify_deployed_workspace_gate.py  verify_gce_runtime.sh  verify_ops_append_sse.py  verify_runtime_api.py  verify_runtime_contract.py  verify_static.sh
src/codex_factory_runtime/: __init__.py  agent_runtime.py  api_app.py  api_models.py  api_routes.py  api_runtime_context.py  auth.py  config.py  main.py  runtime_autonomy.py  runtime_cli.py  runtime_engineering.py  runtime_goals.py  state.py  (+2 more)
state/: README.md  engineering-log.md
templates/: app_request.md  notion_app_request.md
(+70 files in other folders)
