[project]
name = "codex-notion-app-factory"
version = "0.1.0"
description = "Stateful personal app factory with a Codex CLI runtime and a GitHub Pages console."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "pydantic",
  "uvicorn[standard]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
